@@ -192,3 +192,4 @@ Collate:
     'annotation-raster.r'
     'annotation-map.r'
     'autoplot.r'
+    'zzz.r'
